--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "require-dev": {
         "phpstan/phpstan": "1.10.15",
         "phpunit/phpunit": "10.2.0",
+        "phpunit/php-code-coverage": "10.1.3",
         "ext-sqlite3": "*",
         "ext-pdo_sqlite": "*"
     },
