--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,7 +1,3 @@
-FROM quay.imanuel.dev/dockerhub/library---php:8.1-cli
+FROM harbor.ulbricht.casa/jinya/jinya-cms-php-base-test-image:latest
 
-RUN apt-get update
-RUN apt-get install sqlite3 libsqlite3-dev
-RUN docker-php-ext-install pdo pdo_sqlite
-RUN pecl install pcov
-RUN docker-php-ext-enable pcov
+RUN install-php-extensions pdo pdo_sqlite pcov
