TG-12 Apply new branding
Applied the new Jinya branding to the PDOx docs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,18 @@
+stages:
+  - lint
+  - test
+  - deploy
+
+pint:
+  image: harbor.ulbricht.casa/jinya/jinya-cms-php-base-test-image:latest
+  stage: lint
+  script:
+    - composer install
+    - ./vendor/bin/pint --test
+
 phpstan:
   image: harbor.ulbricht.casa/jinya/jinya-cms-php-base-test-image:latest
-  stage: test
+  stage: lint
   script:
     - composer install
     - ./vendor/bin/phpstan --no-progress analyze ./src ./tests
@@ -38,4 +50,4 @@ pages:
     paths:
       - public
   rules:
-    - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
+    - if: $CI_COMMIT_TAG
