--- a/_config.yml
+++ b/_config.yml
@@ -19,15 +19,16 @@
 # in the templates via {{ site.myvariable }}.
 
 title: PDOx
+description: PDOx, a small struct wrapper based on PDO
 email: developers@jinya.de
-baseurl: "/jinya-fonts" # the subpath of your site, e.g. /blog
-url: "https://fonts.jinya.dev/" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://pdox.jinya.dev/" # the base hostname & protocol for your site, e.g. http://example.com
 
 plugins:
   - jekyll-remote-theme
   - jekyll-seo-tag
 
-logo: docs/assets/favicon-512x512.png
+logo: assets/favicon.svg
 
 remote_theme: BDHU/minimalist
 
@@ -38,7 +39,10 @@ sidebar:
     link: https://packagist.org/packages/jinya/pdox
   - name: GitHub
     icon: <i class="fa-brands fa-github"></i>
-    link: https://github.com/Jinya-CMS/jinya-fonts/
+    link: https://github.com/Jinya-CMS/pdox/
+  - name: GitLab
+    icon: <i class="fa-brands fa-gitlab"></i>
+    link: https://gitlab.imanuel.dev/jinya-cms/pdox/
 
 exclude:
   - src
@@ -47,7 +51,7 @@ exclude:
   - composer.json
   - composer.lock
   - .gitlab-ci.yml
-  - docker-compose.yaml
+  - docker-compose.yml
   - Dockerfile
   - Gemfile
   - Gemfile.lock
