--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,11 @@
     "description": "Jinya PDOx is a simple object mapper built around PHPs standard PDO",
     "type": "library",
     "require-dev": {
-        "phpstan/phpstan": "1.10.32",
-        "phpunit/phpunit": "10.3.2",
-        "phpunit/php-code-coverage": "10.1.3",
         "ext-sqlite3": "*",
-        "ext-pdo_sqlite": "*"
+        "ext-pdo_sqlite": "*",
+        "phpstan/phpstan": "1.10.35",
+        "phpunit/phpunit": "10.3.5",
+        "laravel/pint": "v1.13.2"
     },
     "license": "MIT",
     "autoload": {
@@ -29,7 +29,7 @@
     "require": {
         "php": ">=8.1",
         "ext-pdo": "*",
-        "laminas/laminas-hydrator": "^4.2.1",
+        "laminas/laminas-hydrator": "^4.14.0",
         "jetbrains/phpstorm-attributes": "^1.0"
     },
     "scripts": {
