Refactored the .gitlab-ci.yml file to reduce redundancy and improve the workflow.
This change introduces a .install-dependencies stage to the CI configuration, which removes the repetitive task of specifying the same 'image' and 'composer install' for each job. It also updates the phpstan and phpunit from being a dev-dependency in the composer.json file to be installed via phive, providing version isolation and ensuring that the tools will not conflict with the project's dependencies. Furthermore, the Laravel pint package was updated to version v1.13.6. This change was made to streamline the build process and keep dependencies up-to-date.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,28 +1,41 @@
+.install-dependencies:
+  variables:
+    PHP_MEMORY_LIMIT: "2048M"
+  image:
+    name: harbor.ulbricht.casa/jinya/jinya-cms-php-base-test-image:latest
+    pull_policy: always
+  before_script:
+    - phive --no-progress install --trust-gpg-keys D615FEE32FD1702834DACC9C8AC0BAA79732DD42,D8406D0D82947747293778314AA394086372C20A,CA7C2C7A30C8E8E1274A847651C67305FFC2E5C0
+    - composer install
+
 stages:
   - lint
   - test
   - deploy
 
 pint:
-  image: harbor.ulbricht.casa/jinya/jinya-cms-php-base-test-image:latest
+  extends: 
+    - .install-dependencies
   stage: lint
   script:
     - composer install
     - ./vendor/bin/pint --test
 
 phpstan:
-  image: harbor.ulbricht.casa/jinya/jinya-cms-php-base-test-image:latest
+  extends:
+    - .install-dependencies
   stage: lint
   script:
     - composer install
-    - ./vendor/bin/phpstan --no-progress analyze ./src ./tests
+    - ./tools/phpstan --no-progress analyze ./src ./tests
 
 phpunit:
-  image: harbor.ulbricht.casa/jinya/jinya-cms-php-base-test-image:latest
+  extends:
+    - .install-dependencies
   stage: test
   script:
     - composer install
-    - ./vendor/bin/phpunit --log-junit report.xml --configuration ./phpunit.xml --coverage-text --coverage-cobertura=build/coverage.cobertura.xml
+    - ./tools/phpunit --log-junit report.xml --configuration ./phpunit.xml --coverage-text --coverage-cobertura=build/coverage.cobertura.xml
   artifacts:
     when: always
     paths:
@@ -36,7 +49,7 @@ phpunit:
 
 pages:
   stage: deploy
-  image: harbor.ulbricht.casa/proxy/library/ruby:latest
+  image: library/ruby:latest
   variables:
     JEKYLL_ENV: production
     LC_ALL: C.UTF-8
