Update .gitignore and composer.lock files
In our .gitignore, we've simplified the file by removing the listing of each individual asset in the /_site and /tools directories for ignoring.

Additionally, we've updated the composer.lock file to reference the newer versions of our packages, including laminas/laminas-hydrator and laravel/pint. This will ensure that we are using the most up-to-date and secure versions of these dependencies."

--- a/.gitignore
+++ b/.gitignore
@@ -81,51 +81,5 @@ fabric.properties
 
 /.phpunit.cache/
 /build/
-/_site/assets/css/colors-auto.css
-/_site/assets/css/colors-auto.css.map
-/_site/assets/css/colors-auto-default-dark.css
-/_site/assets/css/colors-auto-default-dark.css.map
-/_site/assets/css/colors-dark.css
-/_site/assets/css/colors-dark.css.map
-/_site/assets/css/colors-light.css
-/_site/assets/css/colors-light.css.map
-/_site/assets/css/style.css
-/_site/assets/css/style.css.map
-/_site/assets/fonts/Noto-Sans-700/Noto-Sans-700.eot
-/_site/assets/fonts/Noto-Sans-700/Noto-Sans-700.svg
-/_site/assets/fonts/Noto-Sans-700/Noto-Sans-700.ttf
-/_site/assets/fonts/Noto-Sans-700/Noto-Sans-700.woff
-/_site/assets/fonts/Noto-Sans-700/Noto-Sans-700.woff2
-/_site/assets/fonts/Noto-Sans-700italic/Noto-Sans-700italic.eot
-/_site/assets/fonts/Noto-Sans-700italic/Noto-Sans-700italic.svg
-/_site/assets/fonts/Noto-Sans-700italic/Noto-Sans-700italic.ttf
-/_site/assets/fonts/Noto-Sans-700italic/Noto-Sans-700italic.woff
-/_site/assets/fonts/Noto-Sans-700italic/Noto-Sans-700italic.woff2
-/_site/assets/fonts/Noto-Sans-italic/Noto-Sans-italic.eot
-/_site/assets/fonts/Noto-Sans-italic/Noto-Sans-italic.svg
-/_site/assets/fonts/Noto-Sans-italic/Noto-Sans-italic.ttf
-/_site/assets/fonts/Noto-Sans-italic/Noto-Sans-italic.woff
-/_site/assets/fonts/Noto-Sans-italic/Noto-Sans-italic.woff2
-/_site/assets/fonts/Noto-Sans-regular/Noto-Sans-regular.eot
-/_site/assets/fonts/Noto-Sans-regular/Noto-Sans-regular.svg
-/_site/assets/fonts/Noto-Sans-regular/Noto-Sans-regular.ttf
-/_site/assets/fonts/Noto-Sans-regular/Noto-Sans-regular.woff
-/_site/assets/fonts/Noto-Sans-regular/Noto-Sans-regular.woff2
-/_site/assets/img/logo.png
-/_site/assets/js/scale.fix.js
-/_site/assets/favicon.svg
-/_site/assets/favicon-dark.png
-/_site/assets/favicon-light.png
-/_site/build/coverage/Exceptions/dashboard.html
-/_site/build/coverage/Exceptions/index.html
-/_site/build/coverage/Exceptions/InvalidQueryException.php.html
-/_site/build/coverage/Exceptions/NoResultException.php.html
-/_site/build/coverage/dashboard.html
-/_site/build/coverage/HydratorType.php.html
-/_site/build/coverage/index.html
-/_site/build/coverage/PDOx.php.html
-/_site/build/clover.xml
-/_site/build/coverage.cobertura.xml
-/_site/favicon.ico
-/_site/index.html
-/_site/LICENSE
+/_site
+tools
